RouteModule: documentation
