# app/Modules/RouteModule/validations/UpdateRouteRequest.php
@@ -3,7 +3,8 @@
 namespace App\Modules\RouteModule\validations;
 
 use App\Http\Requests\BaseFormRequest;
-
+use Illuminate\Database\Eloquent\SoftDeletes;
+use Illuminate\Validation\Rule;
 
 class UpdateRouteRequest extends BaseFormRequest
 {
@@ -25,7 +26,10 @@ class UpdateRouteRequest extends BaseFormRequest
     public function rules()
     {
         return [
-            //
+            'name' => ['required', 'string', 'min:5'],
+            'description' => ['required', 'string', 'min:10'],
+            'driver_id' => ['required', Rule::exists('users', 'id')->whereNotNull('ssn')->withoutTrashed()],
+            'vehicle_id' => ['required', Rule::exists('vehicles', 'id')->where('active', true)->withoutTrashed()],
         ];
     }
 }
